utils/local-deployment/istio-manifests/Base/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gateway-api
  namespace: kuadrant-system
spec:
  gatewayClassName: istio
  listeners:
  - hostname: "*.example.com"
    name: "example"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
